function names modified

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <input id="dec" type="text" aria-label="Decimal" class="form-control"
                         oninput="convert_dec_to_hex(document.getElementById('dec').value)"
-                        onclick="convert_hex_to_dec(document.getElementById('hex').value)">
+                        onclick="convert_dec_to_hex(document.getElementById('dec').value)">
                 </div>
             </div>
 
@@ -77,10 +77,6 @@
 
         </div>
     </div>
-</div>
-
-<div class="popup" onclick="pop_up()">Click me!
-    <span class="popuptext" id="myPopup">Popup text...</span>
 </div>
 
 <footer class="footer">
