--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         gtag('config', 'G-MXPGJ5VYGX');
     </script>
 
+    <script data-ad-client="ca-pub-9589716148066137" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </head>
 <body>
 
 <div id="main-div">
-    <div class="card">
+    <div class="card big-card">
         <div class="card-header">Decimal to Hexadecimal</div>
 
         <div class="card-body">
@@ -59,7 +61,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card big-card">
         <div class="card-header">Hexadecimal to Decimal</div>
 
         <div class="card-body">
