--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HEX TO DECIMAL</title>
+    <title>Hexadecimal to Decimal Converter</title>
 
-    
+    <link rel="icon" href="favicon.ico">
 
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
