more content added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Hex to decimal<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Binary to Decimal</a>
         </div>
       </div>
     </nav>
@@ -35,6 +37,8 @@
 <body>
 
 <div id="main-div">
+    <h2 style="text-align: center;">Hexadecimal to Decimal Converter</h2>
+    <p style="text-align: center;">To use this online hex to decimal converter tool, type a decimal or hex value into the fields below. Result will be generated as you type. Click on the result to copy it to your clipboard!</p>
     <div class="card big-card">
         <div class="card-header">Decimal to Hexadecimal</div>
 
