--- a/binary.html
+++ b/binary.html
@@ -17,9 +17,10 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Hex to decimal<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="binary.html">Binary to Decimal</a>
+          <a class="nav-item nav-link" href="index.html">Hex to decimal</a>
+          <a class="nav-item nav-link active" href="#">Binary to Decimal</a>
           <a class="nav-item nav-link" href="about.html">About</a>
+
         </div>
       </div>
     </nav>
@@ -38,13 +39,10 @@
 <body>
 
 <div id="main-div">
-    <h1 style="text-align: center;">Hexadecimal to Decimal Converter</h1>
-    <p style="text-align: center;">To use this online hex to decimal converter tool, type a decimal or hex value into the fields below. Result will be generated as you type. Click on the result to copy it to your clipboard!</p>
-    
+    <h1 style="text-align: center;">Binary to Decimal Converter</h1>
+    <p style="text-align: center;">To use this online binary to decimal converter tool, type a decimal or binary value into the fields below. Result will be generated as you type. Click on the result to copy it to your clipboard!</p>
     <div class="card big-card">
-
-        <div class="card-header">Decimal to Hexadecimal</div>
-
+        <div class="card-header">Decimal to Binary</div>
 
         <div class="card-body">
             <div class="form-row align-items-center">
@@ -53,8 +51,8 @@
                         <span class="input-group-text">Decimal</span>
                     </div>
                     <input id="dec" type="text" aria-label="Decimal" class="form-control"
-                        oninput="convert_dec_to_hex(document.getElementById('dec').value)"
-                        onclick="convert_dec_to_hex(document.getElementById('dec').value)"
+                        oninput=""
+                        onclick=""
                         placeholder="Type here to convert">
                 </div>
             </div>
@@ -70,21 +68,20 @@
         </div>
     </div>
 
-
     <div class="card big-card">
-        <div class="card-header">Hexadecimal to Decimal</div>
+        <div class="card-header">Binary to Decimal</div>
 
         <div class="card-body">
             <div class="form-row align-items-center">
                 <div class="input-group">
 
                     <div class="input-group-prepend">
-                        <span class="input-group-text">Hexadecimal</span>
+                        <span class="input-group-text">Binary</span>
                     </div>
 
                 <input id="hex" type="text" aria-label="Hex" class="form-control"
-                    oninput="convert_hex_to_dec(document.getElementById('hex').value)"
-                    onclick="convert_hex_to_dec(document.getElementById('hex').value)"
+                    oninput=""
+                    onclick=""
                     placeholder="Type here to convert">
                 </div>
             </div>
@@ -101,31 +98,8 @@
 
         </div>
     </div>
-
-    <br>
-
-
-    <div class="card big-card">
-        <div class="card-header"><h2 style="text-align: center;">What is Hexadecimal?</h2></div>
-        <div class="card-body">
-            The hexadecimal numeral system aka hex, is a base 16 numeral system made up for computers. Unlike the standard numeral system with ten symbols (0,1,2..9) hexadecimal uses the decimal numbers and six extra symbols. There are no numerical symbols that represent values greater than nine, so first 6 letters of the English alphabet are used. A for 10, B for 11, C for 12, D for 13, E for 14 and F for 15.
-        </div>
-    </div>
-
-    <div class="card big-card">
-        <div class="card-header"><h2 style="text-align: center;">How to convert decimal to hex?</h2></div>
-        <div class="card-body">
-
-            <ul class="list-group">
-                <li class="list-group-item">1. Divide the number by 16.</li>
-                <li class="list-group-item">2. Get the integer quotient for the next iteration.</li>
-                <li class="list-group-item">3. Get the remainder for the hex digit.</li>
-                <li class="list-group-item">4. Repeat the steps until the quotient is equal to 0.</li>
-            </ul>
-
-        </div>
-    </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
