--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Hexadecimal to Decimal Converter</title>
 
     <link rel="icon" href="icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -19,7 +20,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Hex to decimal<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="binary.html">Binary to Decimal</a>
-          <a class="nav-item nav-link" href="about.html">About</a>
+          <a class="nav-item nav-link" href="about.html">About Us</a>
         </div>
       </div>
     </nav>
