--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hexadecimal to Decimal Converter</title>
+    <title>Hexadecimal to Decimal Converter - About</title>
 
     <link rel="icon" href="icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -42,12 +43,12 @@
 
     <div class="card">
         <div class="card-header">
-          About
+          Who are we?
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer"><cite title="Source Title">by msgul</cite></footer>
+            <p>We are just 2 developers with a passion of helping others. Since todays converter sites are outdated and humble, we created a brand new one.</p>
+            <footer class="blockquote-footer"><cite title="Source Title"> msgul, Oktn</cite></footer>
           </blockquote>
         </div>
     </div>
